# CANDOR-Benchmark

./: .gitmodules  CMakeLists.txt  setup.py
include/CANDY/: AbstractIndex.h  ConcurrentIndex.h  CufeIndex.h  DiskANNIndex.h  GANNSIndex.h  HNSWlibIndex.h  NSWlibIndex.h  PyannsIndex.h
include/CANDY/GANNSIndex/: GANNSIndex.h  build.cu  data.h  kernel_aggregate_forward_edges.h  kernel_global_edge_sort.h  kernel_local_graph_construction.h  kernel_local_graph_mergence_hnsw.h  kernel_local_graph_mergence_nsw.h  kernel_local_neighbors_sort_hnsw.h  kernel_local_neighbors_sort_nsw.h  kernel_search_hnsw.h  kernel_search_nsw.h  query.cu  structure_on_device.cuh
include/CANDY/HNSWNaive/: HNSW.h
include/Utils/: IntelliTensorOP.hpp  ThreadPool.hpp
include/Utils/ComputeGT/: CalcStepwiseRecall.hpp  ComputeGT.hpp  ComputeStepwiseGT.hpp
src/: PyCANDY.cpp
src/CANDY/: AbstractIndex.cpp  CMakeLists.txt  ConcurrentIndex.cpp  CufeIndex.cpp  DiskANNIndex.cpp  FaissIndex.cpp  GANNSIndex.cu  HNSWlibIndex.cpp  IndexTable.cpp  NSWlibIndex.cpp  PyannsIndex.cpp
src/CANDY/GANNSIndex/: CMakeLists.txt  GANNSIndex.cu  kernel_aggregate_forward_edges.cu  kernel_global_edge_sort.cu  kernel_local_graph_construction.cu  kernel_local_graph_mergence_hnsw.cu  kernel_local_graph_mergence_nsw.cu  kernel_local_neighbors_sort_hnsw.cu  kernel_local_neighbors_sort_nsw.cu  kernel_search_hnsw.cu  kernel_search_nsw.cu
src/CANDY/GANNSIndex/graph_index/: CMakeLists.txt  hnsw_graph_operations.cu  nsw_graph_operations.cu
src/CANDY/HNSWNaive/: HNSW.cpp
src/Utils/: CMakeLists.txt  ThreadPool.cpp
(+20 files in other folders)
